--- a/BotifyQA/build.gradle
+++ b/BotifyQA/build.gradle
@@ -6,42 +6,59 @@
  * user guide available at https://docs.gradle.org/4.10.2/userguide/java_library_plugin.html
  */
 apply plugin: 'java'
+apply plugin: 'eclipse'
 version='1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
+        attributes 'Implementation-Title': 'Google search',
                    'Implementation-Version': version
     }
 }
- 
 repositories {
     mavenCentral()
     jcenter()
 }
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     // TestNG Dependency
     testCompile 'org.testng:testng:6.8.21'
   	// Selenium Dependency
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.10.0'
-
+	// Apache poi library
+	compile group: 'org.apache.poi', name: 'poi', version: '3.9'
+	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
+	// https://mvnrepository.com/artifact/log4j/log4j
+	compile 'log4j:log4j:1.2.17'
+	compile 'commons-logging:commons-logging:1.2'
+	
+	
 }
 task wrapper(type: Wrapper) {
      gradleVersion = '2.14'
 }
 test {
-	//Setting the system property for google
-		systemProperty 'some.prop', 'value'
 	// set heap size for the test JVM(s)
    		minHeapSize = "128m"
    		maxHeapSize = "512m"
 
    // set JVM arguments for the test JVM(s)
    		jvmArgs '-XX:MaxPermSize=256m'
+   	 testLogging {
+        showStandardStreams = true
+    }
 }
 
+tasks.withType(Test) {
+    testLogging {
+        events "standardOut", "started", "passed", "skipped", "failed"
+    }
+}
+// This task will launch tests included in testNG xml file
 task TestCaseGoogle(type:Test,dependsOn:'test'){
 group="BotiFyTestsLaunhers"
 description="this launcher for Google Test Cases"
+
 useTestNG(){
 	
 	suites 'testng.xml' 
