--- a/BotifyQA/build.gradle
+++ b/BotifyQA/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.10.0'
 	// Apache poi library
 	compile group: 'org.apache.poi', name: 'poi', version: '3.9'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
 	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
 	// https://mvnrepository.com/artifact/log4j/log4j
@@ -50,15 +52,16 @@ test {
 }
 
 tasks.withType(Test) {
+dependsOn 'cleanTest'
     testLogging {
         events "standardOut", "started", "passed", "skipped", "failed"
     }
+
 }
 // This task will launch tests included in testNG xml file
 task TestCaseGoogle(type:Test,dependsOn:'test'){
 group="BotiFyTestsLaunhers"
 description="this launcher for Google Test Cases"
-
 useTestNG(){
 	
 	suites 'testng.xml' 
